5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4151/executions/1836_1274.log
== TEST (2019-06-25 11:16:26) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=int(input("digite: "))
mat=zeros((n,n), dtype=int)
for i in range(n):
	for j in range(n):
		if(i>j):
			mat[i,j]=j+1
		elif(i<j):
			mat[i,j]=i+1
		elif(i=j):
			mat[i,j]=i+1
print(mat)
			
-- ERROR:
File "XXXX", line 11
    elif(i=j):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:16:36) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=int(input("digite: "))
mat=zeros((n,n), dtype=int)
for i in range(n):
	for j in range(n):
		if(i>j):
			mat[i,j]=j+1
		elif(i<j):
			mat[i,j]=i+1
		elif(i==j):
			mat[i,j]=i+1
print(mat)
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 11:16:58) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=int(input("digite: "))
mat=zeros((n,n), dtype=int)
for i in range(n):
	for j in range(n):
		if(i>j):
			mat[i,j]=j+1
		elif(i<j):
			mat[i,j]=i+1
		elif(i==j):
			mat[i,j]=i+1
print(mat)
			
-- EXECUTION TIME:
0.984422
-- TEST CASE 1:
---- input:
3
---- correct output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
---- user output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
-- TEST CASE 2:
---- input:
8
---- correct output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
---- user output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
-- TEST CASE 3:
---- input:
1
---- correct output:
[[1]]
---- user output:
[[1]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
